--- a/app/assets/stylesheets/plans/show.css
+++ b/app/assets/stylesheets/plans/show.css
@@ -49,9 +49,10 @@
 
 .detail-item{
   height: 100px;
+  width: 500px;
   padding: 0px 500px 20px 0;
   border: 1px black solid;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 .plan-price-box{
