--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -51,7 +51,7 @@
 
     <div class="participate-btn">
     <% if user_signed_in?%>
-    <%= link_to 'プランに参加する', "/",class:"plan-participate btn"%>
+    <%= link_to 'プランに参加する', "#",class:"plan-participate btn"%>
     <% end %>
     </div>
 
