--- a/app/views/plans/new.html.erb
+++ b/app/views/plans/new.html.erb
@@ -1,5 +1,5 @@
 <header class="new-plans-header">
-  <%= link_to image_tag("dodo-logo.png", class:"dodo-icon-three"), "/" %>
+  <%= link_to image_tag("dodo-logo.png", class:"dodo-icon-three"), "#" %>
 <span class="header-text">プランの情報を入力</span>
 </header>
 <div class="plan-contents">
