--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -41,7 +41,7 @@
   margin: 0 0 20px 0;
   font-size: 0.8rem;
   user-select: none;
-  border: 5px #d7f0f7 solid;
+  border: 5px #6d6c6c solid;
   border-radius: 100px;
   transition: 0.4s ease;
   width: auto;
