--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -43,7 +43,7 @@
     <%if current_user.id == @plan.user_id %> 
     <%= link_to 'プランの編集', edit_plan_path(@plan.id), method: :get, class: "plan-edit-btn btn" %>
     <p class='or-text'>or</p>
-    <%= link_to '削除', "#", class:'plan-destroy btn' %>
+    <%= link_to '削除', plan_path(@plan.id), method: :delete, class:'plan-destroy btn' %>
     <% end %>
     </div>
     <%end%>
