--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <header class='top-page-header'>
   <div class="header-inner">
     <div class="logo">
-    <%= link_to image_tag("dodo-logo.png", class:"dodo-icon"), "#" %>
+    <%= link_to image_tag("dodo-logo.png", class:"dodo-icon"), "/" %>
     </div>
     <nav class="header-nav">
       <div class="header-nav-item">
