--- a/app/assets/stylesheets/shared/header.css
+++ b/app/assets/stylesheets/shared/header.css
@@ -66,8 +66,8 @@
 
 .form2-input {
   box-sizing: border-box;
-  width: 300px;
-  height: 40px;
+  width: 350px;
+  height: 50px;
   padding: 0 8px 0 30px;
   margin: 5px 0;
   font-size: 12px;
@@ -84,21 +84,21 @@
 }
 
 .form2-button {
-  position: absolute;
-  top: 0;
-  left: 4px;
   box-sizing: content-box;
-  width: 30px;
-  height: 38px;
-  padding: 0;
-  font-size: 16px;
-  vertical-align: vertical-align;
-  pointer-events: none;
-  background: inherit;
-  border: 0;
-  opacity: 0.54;
+  background: #ffffff;
+  border-radius: 5px;
+  color: rgb(43, 43, 43);
+  width: 40px;
+  height: 30px;
+  padding: 5px;
+  font-size: 14px;
+  border: none;
 }
 
+.form2-button:hover{
+  color: #fff;
+  background-color: rgb(95, 159, 255);
+}
 .lists-right {
   display: flex;
   list-style: none;
